--- a/index.html
+++ b/index.html
@@ -34,133 +34,56 @@
       background:transparent !important;
     }
 
-    /* Fallback estático enquanto carrega o 3D */
     #logo-fallback{
-      position:absolute; inset:0;
-      margin:auto; max-width:62vw; max-height:42vh;
+      position:absolute;
+      top:50%;
+      left:50%;
+      transform:translate(-50%,-50%);
+      max-width:62vw; max-height:42vh;
       object-fit:contain;
       z-index:0;
       opacity:1; transition:opacity .25s ease;
     }
     #logo-fallback.hidden{ opacity:0; pointer-events:none; }
 
-    @media (max-width: 640px){
-      html, body { margin:0; background:#fff; }
-      .logo3d-wrap{
-        min-height: 100px;
-        background:#fff;
-      }
-      .logo3d-wrap::before{ content:none !important; }
-    }
-
     .hint{
       position:absolute; bottom:10px; left:50%;
       text-align:center;
       transform:translateX(-50%);
       color:#404040; font-size:12px; opacity:.75; z-index:2;
-      font-family:'Lucida Sans','Lucida Sans Regular','Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,sans-serif;
-    }
-    .msg{
-      position:absolute; top:10px; left:50%;
-      transform:translateX(-50%); font-size:12px;
-      background:#141414; border:1px solid #2a2a2a;
-      padding:.5em .8em; border-radius:10px; opacity:.9; max-width:92%;
-      text-align:center; z-index:2; color:#fff;
-      display:none;
     }
 
-    .iconedireita{ position: fixed; top:0; right:0; z-index:3; pointer-events:none; }
-    .iconedireita img{ display:block; width:50vh; height:auto; margin:0; padding:0; }
-
-    .iconeesquerda{ position: fixed; bottom:0; left:0; z-index:3; pointer-events:none; }
-    .iconeesquerda img{ display:block; width:50vh; height:auto; margin:0; padding-bottom:50px; }
-
-    .iconeesquerdamobile img{ display:none }
-
-    @media (max-width:640px){
-      :root{ --icon-h: 250px; }
-
-      .iconeesquerdamobile{
-        position: fixed; top:0; left:1; z-index:10;
-        margin:0; padding:0; pointer-events:none;
-      }
-      .iconeesquerdamobile img{
-        display:block; height:var(--icon-h); width:auto; margin:0; padding:0;
-      }
-
-      .logo3d-wrap{
-        position:relative;
-        padding-top: calc(var(--icon-h) + 0px);
-        height: calc(100dvh - var(--icon-h) - 8px);
-        background:#fff; margin:0;
-      }
-
-      .logo3d-wrap canvas{
-        position:absolute; top:0; left:50%;
-        transform: translateX(-50%) scale(0.9);
-        transform-origin: top center;
-        z-index:1;
-      }
-
-      .iconedireita, .iconeesquerda { display:none; }
-    }
-
-    /* Botão */
     .botao{
       position:absolute;
       left:50%;
       transform:translateX(-50%);
-      bottom:68px;
+      top:55%;
       z-index:2;
     }
     .botao a.botao-whatsapp{
       display:inline-block;
-      background:#fff;
+      background:#000;
       border:3px solid #000;
-      color:#000;
+      color:#fff;
       border-radius:0;
-      padding:12px 18px;
+      padding:14px 22px;
       font-size:14px;
       font-weight:600;
       letter-spacing:.5px;
       text-decoration:none;
-      white-space:nowrap;
       transition:background .2s, color .2s, transform .1s;
       -webkit-tap-highlight-color: transparent;
     }
-    .botao a.botao-whatsapp:hover{ background:#000; color:#fff; }
-    .botao a.botao-whatsapp:visited{ color:#000; }
+    .botao a.botao-whatsapp:hover{
+      background:#fff;
+      color:#000;
+    }
 
     @media (max-width:640px){
-      .botao{ bottom:74px; }
-      .botao a.botao-whatsapp{
-        padding:10px 16px;
-        font-size:12px;
-        border-width:3px;
-      }
-      .hint{ font-size:12px; bottom:14px; }
+      #logo-fallback{ max-width:70vw; top:45%; }
+      .botao{ top:60%; }
     }
 
-    @media (min-width: 641px){
-      .logo3d-wrap{ min-height:100vh; }
-      .logo3d-wrap canvas{
-        position:absolute;
-        left:50%;
-        top:38%;
-        transform:translate(-50%, -50%) scale(1.2);
-        transform-origin:center center;
-      }
-      .botao{
-        left:50%;
-        transform:translateX(-50%);
-        bottom: 22vh;
-        z-index:2;
-      }
-      .hint{
-        font-size:16px;
-        bottom: 8vh;
-      }
-    }
   </style>
 
   <script type="importmap">
@@ -171,13 +94,7 @@
   </script>
 </head>
 <body>
-  <div class="iconedireita" id="iconedireita"><img src="testtedeiconedireita.png" alt=""></div>
-  <div class="iconeesquerda" id="iconeesquerda"><img src="testedeicone.png" alt=""></div>
-  <div class="iconeesquerdamobile" id="iconeesquerdamobile"><img src="testedeicone.png" alt=""></div>
-
   <div class="logo3d-wrap" id="logo3d">
-    <div class="msg" id="msg"></div>
-
     <img id="logo-fallback" src="logo-static.webp" alt="CARVA">
 
     <div class="botao" id="botao">
@@ -193,7 +110,6 @@
     const CONFIG = {
       modelUrl: './logo3dpreta.gltf',
       resourcePath: './',
-      basePath: null,
       crossOrigin: 'anonymous',
       initialScale: 1.0,
       rotateOnIdle: true,
@@ -204,13 +120,7 @@
     import { DRACOLoader } from 'three/addons/loaders/DRACOLoader.js';
 
     const wrap = document.getElementById('logo3d');
-    const msg  = document.getElementById('msg');
     const fallbackImg = document.getElementById('logo-fallback');
-
-    function showMsg(text){ msg.innerHTML = text; msg.style.display = text ? 'block' : 'none'; }
-
-    const isMobile = /Mobi|Android/i.test(navigator.userAgent);
-
     const scene = new THREE.Scene();
     scene.background = null;
 
@@ -219,11 +129,10 @@
 
     const renderer = new THREE.WebGLRenderer({ antialias:true, alpha:true });
     renderer.setClearColor(0x000000, 0);
-    renderer.setPixelRatio(isMobile ? 1.0 : Math.min(window.devicePixelRatio, 1.5));
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 1.5));
     renderer.shadowMap.enabled = false;
     wrap.appendChild(renderer.domElement);
 
-    // Luz simples e leve
     scene.add(new THREE.HemisphereLight(0xffffff, 0x333333, 1.2));
     const dir = new THREE.DirectionalLight(0xffffff, 1.1);
     dir.position.set(2,3,4);
@@ -237,93 +146,61 @@
     draco.setDecoderPath('https://unpkg.com/three@0.160.0/examples/jsm/libs/draco/');
     loader.setDRACOLoader(draco);
 
-    if (CONFIG.basePath) loader.setPath(CONFIG.basePath);
-    if (CONFIG.resourcePath) loader.setResourcePath(CONFIG.resourcePath);
-    if (CONFIG.crossOrigin) loader.crossOrigin = CONFIG.crossOrigin;
-
-    function loadModel(){
-      loader.load(
-        CONFIG.modelUrl,
-        (gltf)=>{
-          const model = gltf.scene;
-          const box = new THREE.Box3().setFromObject(model);
-          const size = box.getSize(new THREE.Vector3()).length();
-          const scale = (CONFIG.initialScale * 1) / (size || 1);
-          model.scale.setScalar(scale);
-
-          model.traverse((o)=>{
-            if(o.isMesh){
-              o.castShadow = false;
-              o.receiveShadow = false;
-              if(o.material) o.material.envMapIntensity = 1.0;
-            }
-          });
-          model.rotation.set(0, Math.PI*0.1, 0);
-          group.add(model);
-          if (fallbackImg) fallbackImg.classList.add('hidden');
-          showMsg('');
-        },
-        undefined,
-        (err)=>{
-          console.error('Erro ao carregar GLTF:', err);
-          showMsg('Não consegui carregar o 3D agora.');
-          // Mantém o fallback
-        }
-      );
-    }
-    loadModel();
+    loader.load(
+      CONFIG.modelUrl,
+      (gltf)=>{
+        const model = gltf.scene;
+        const box = new THREE.Box3().setFromObject(model);
+        const size = box.getSize(new THREE.Vector3()).length();
+        const scale = (CONFIG.initialScale * 1) / (size || 1);
+        model.scale.setScalar(scale);
+        model.traverse(o=>{ if(o.isMesh){ o.castShadow=false; o.receiveShadow=false; } });
+        model.rotation.set(0, Math.PI*0.1, 0);
+        group.add(model);
+        fallbackImg.classList.add('hidden');
+      },
+      undefined,
+      ()=>{}
+    );
 
     function resize(){
       const w = wrap.clientWidth, h = wrap.clientHeight;
       renderer.setSize(w, h, false);
-      camera.aspect = w / h; camera.updateProjectionMatrix();
+      camera.aspect = w / h;
+      camera.updateProjectionMatrix();
     }
     resize();
     addEventListener('resize', resize);
 
-    // Interação arrastar + inércia
-    let isDown = false, lastX = 0, lastY = 0, vx = 0, vy = 0;
-    const onDown = (x,y)=>{ isDown = true; lastX = x; lastY = y; };
-    const onMove = (x,y)=>{
-      if(!isDown) return;
-      const dx = x - lastX, dy = y - lastY; lastX = x; lastY = y;
-      const k = 0.005;
-      vy = -dx * k; vx = -dy * k;
-      group.rotation.y += vy; group.rotation.x += vx;
-      group.rotation.x = Math.max(-Math.PI/2, Math.min(Math.PI/2, group.rotation.x));
+    let isDown=false,lastX=0,lastY=0,vx=0,vy=0;
+    const onDown=(x,y)=>{isDown=true;lastX=x;lastY=y;};
+    const onMove=(x,y)=>{
+      if(!isDown)return;
+      const dx=x-lastX,dy=y-lastY;lastX=x;lastY=y;
+      const k=0.005;
+      vy=-dx*k;vx=-dy*k;
+      group.rotation.y+=vy;group.rotation.x+=vx;
+      group.rotation.x=Math.max(-Math.PI/2,Math.min(Math.PI/2,group.rotation.x));
     };
-    const onUp = ()=>{ isDown = false; };
-    renderer.domElement.addEventListener('mousedown', e=> onDown(e.clientX, e.clientY));
-    addEventListener('mousemove', e=> onMove(e.clientX, e.clientY));
-    addEventListener('mouseup', onUp);
-    renderer.domElement.addEventListener('touchstart', e=>{
-      const t=e.touches[0]; if(t) onDown(t.clientX, t.clientY);
-    }, {passive:true});
-    renderer.domElement.addEventListener('touchmove',  e=>{
-      const t=e.touches[0]; if(t) onMove(t.clientX, t.clientY);
-    }, {passive:true});
-    renderer.domElement.addEventListener('touchend', onUp);
+    const onUp=()=>{isDown=false;};
+    renderer.domElement.addEventListener('mousedown',e=>onDown(e.clientX,e.clientY));
+    addEventListener('mousemove',e=>onMove(e.clientX,e.clientY));
+    addEventListener('mouseup',onUp);
+    renderer.domElement.addEventListener('touchstart',e=>{const t=e.touches[0];if(t)onDown(t.clientX,t.clientY);},{passive:true});
+    renderer.domElement.addEventListener('touchmove',e=>{const t=e.touches[0];if(t)onMove(t.clientX,t.clientY);},{passive:true});
+    renderer.domElement.addEventListener('touchend',onUp);
 
-    const clock = new THREE.Clock();
+    const clock=new THREE.Clock();
     function tick(){
-      const dt = Math.min(clock.getDelta(), 0.032);
+      const dt=Math.min(clock.getDelta(),0.032);
       if(!isDown){
-        group.rotation.y += vy; group.rotation.x += vx;
-        vy *= 0.94; vx *= 0.94;
-        if(CONFIG.rotateOnIdle && Math.abs(vx)+Math.abs(vy) < 0.0006){ group.rotation.y += 0.003; }
+        group.rotation.y+=vy;group.rotation.x+=vx;
+        vy*=0.94;vx*=0.94;
+        if(CONFIG.rotateOnIdle&&Math.abs(vx)+Math.abs(vy)<0.0006){group.rotation.y+=0.003;}
       }
-      renderer.render(scene, camera);
+      renderer.render(scene,camera);
     }
     renderer.setAnimationLoop(tick);
-
-    document.addEventListener('visibilitychange', ()=>{
-      if (document.hidden) renderer.setAnimationLoop(null);
-      else renderer.setAnimationLoop(tick);
-    });
-
-    if (location.protocol === 'file:') {
-      showMsg('Dica: rode com um servidor local (ex.: VS Code Live Server).');
-    }
   </script>
 </body>
 </html>
